--- a/css/header.css
+++ b/css/header.css
@@ -8,22 +8,109 @@
     align-items: center;
     margin-bottom: var(--block-distance);
 }
-.header .navbar {
+.navbar {
     width: 100%;
     padding-inline: 52px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 32px;
-    margin-bottom: 184px;
+    margin-bottom: var(--block-distance);
 }
+.navbar-list {
+    display: flex;
+    gap: 20px;
+    list-style: none;
+}
+.header .navbar-list__item {
+    text-decoration: none;
+    color: white;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    cursor: pointer;
+}
+.mobile-menu {
+    display: none;
+}
+
+#mobile-menu__togle {
+    opacity: 0;
+}
+#mobile-menu__togle:checked + .mobile-menu__btn {
+    position: fixed;
+}
+#mobile-menu__togle:checked + .mobile-menu__btn > span {
+    transform: rotate(45deg);
+}
+#mobile-menu__togle:checked + .mobile-menu__btn > span::before {
+    top: 0;
+    transform: rotate(0deg);
+}
+#mobile-menu__togle:checked + .mobile-menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+}
+#mobile-menu__togle:checked ~ .mobile-menu__box {
+    right: 0;
+}
+.mobile-menu__btn {
+    position: relative;
+    display: block;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+    z-index: 2;
+}
+.mobile-menu__btn > span,
+.mobile-menu__btn > span::before,
+.mobile-menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #000;
+    transition-duration: 0.25s;
+}
+.mobile-menu__btn > span::before {
+    content: "";
+    top: -8px;
+}
+.mobile-menu__btn > span::after {
+    content: "";
+    top: 8px;
+}
+.mobile-menu__box {
+    display: block;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 300px;
+    height: 100%;
+    margin: 0;
+    padding: 80px 0;
+    list-style: none;
+    background-color: #f2f2f2;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+    transition-duration: 0.25s;
+    z-index: 1;
+}
+.mobile-menu__box .navbar-list__item {
+    display: block;
+    padding: 12px 24px;
+    color: #333;
+    font-size: 20px;
+    font-weight: 600;
+    transition-duration: 0.25s;
+}
+
 .header-main {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
 }
-.header-main-title {
+.header-main__title {
     font-weight: 500;
     font-size: 68px;
     line-height: 120%;
@@ -31,54 +118,42 @@
     text-align: center;
     margin-bottom: 8px;
 }
-.header-main-description {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 34px;
-    color: white;
+.header-main__description {
     text-align: center;
     margin-bottom: 40px;
 }
 .header-main .btn {
     margin-bottom: 88px;
 }
-.header-main-img {
+.header-main__img {
     width: 70%;
 }
-.header-main-img-relative {
+.header-main__img--relative {
     position: relative;
     padding-top: 63%;
 }
-.header-main-img .header-main-img-content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
 
 @media screen and (max-width: 1250px) {
-    .header-main-title {
+    .navbar-list {
+        display: none;
+    }
+    .navbar .btn {
+        display: none;
+    }
+    .mobile-menu {
+        display: block;
+    }
+    .header-main__title {
         font-size: 42px;
         line-height: 80%;
     }
-    .header-main-description {
-        font-size: 18px;
-        line-height: 30px;
-    }
 }
 @media screen and (max-width: 600px) {
-    .header-main-title {
+    .header-main__title {
         font-size: 36px;
         line-height: 80%;
     }
-    .header-main-description {
-        font-size: 16px;
-        line-height: 28px;
-    }
-    .header-main-img {
+    .header-main__img {
         width: 100%;
     }
 }
