--- a/css/mainVariables.css
+++ b/css/mainVariables.css
@@ -13,125 +13,80 @@
     cursor: pointer;
 }
 
+.aspect-ratio-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .page-logo {
     display: flex;
     align-items: center;
 }
-.page-logo--img {
+.page-logo__img {
     width: 260px;
     height: 60px;
 }
-.navbar-list {
-    display: flex;
-    gap: 20px;
-}
-.navbar-list > li {
-    list-style: none;
-}
-.navbar-list > li > a {
-    text-decoration: none;
-    color: white;
+.title {
     font-weight: 500;
-    font-size: 16px;
-    line-height: 100%;
-    cursor: pointer;
+    font-size: 48px;
+    line-height: 122%;
 }
-
-.hamburger-menu {
-    display: none;
+.block-title {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 30px;
+    color: #3b3e43;
+    margin-bottom: 15px;
 }
-
-#hamburger-menu-togle {
-    opacity: 0;
-}
-#hamburger-menu-togle:checked + .hamburger-menu-btn {
-    position: fixed;
-}
-#hamburger-menu-togle:checked + .hamburger-menu-btn > span {
-    transform: rotate(45deg);
-}
-#hamburger-menu-togle:checked + .hamburger-menu-btn > span::before {
-    top: 0;
-    transform: rotate(0deg);
-}
-#hamburger-menu-togle:checked + .hamburger-menu-btn > span::after {
-    top: 0;
-    transform: rotate(90deg);
-}
-#hamburger-menu-togle:checked ~ .hamburger-menu-box {
-    right: 0;
-}
-.hamburger-menu-btn {
-    position: relative;
-    display: block;
-    width: 26px;
-    height: 26px;
-    cursor: pointer;
-    z-index: 3;
-}
-.hamburger-menu-btn > span,
-.hamburger-menu-btn > span::before,
-.hamburger-menu-btn > span::after {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background-color: #000;
-    transition-duration: 0.25s;
-}
-.hamburger-menu-btn > span::before {
-    content: "";
-    top: -8px;
-}
-.hamburger-menu-btn > span::after {
-    content: "";
-    top: 8px;
-}
-.hamburger-menu-box {
-    display: block;
-    position: fixed;
-    top: 0;
-    right: -100%;
-    width: 300px;
-    height: 100%;
-    margin: 0;
-    padding: 80px 0;
-    list-style: none;
-    background-color: #f2f2f2;
-    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
-    transition-duration: 0.25s;
-    z-index: 2;
-}
-.navbar-list--item {
-    display: block;
-    padding: 12px 24px;
-    color: #333;
+.description {
+    font-weight: 400;
     font-size: 20px;
-    font-weight: 600;
-    text-decoration: none;
-    transition-duration: 0.25s;
+    line-height: 34px;
+    color: white;
+}
+.block-description {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 148%;
 }
 
 @media screen and (max-width: 1250px) {
-    .hamburger-menu {
-        display: block;
-    }
-    .navbar-list {
-        display: none;
-    }
-    .navbar .btn {
-        display: none;
-    }
-    .page-logo--img {
+    .page-logo__img {
         width: 200px;
         height: 50px;
+    }
+    .title {
+        font-size: 36px;
+    }
+    .block-title {
+        font-size: 20px;
+        line-height: 28px;
+        margin-bottom: 10px;
+    }
+    .description {
+        font-size: 18px;
+    }
+    .block-description {
+        font-size: 14px;
+        line-height: 100%;
     }
 }
 
 @media screen and (max-width: 600px) {
-    .page-logo--img {
+    .page-logo__img {
         width: 160px;
         height: 40px;
+    }
+    .title {
+        font-size: 28px;
+    }
+    .description {
+        font-size: 16px;
+        line-height: 28px;
     }
 }
 
