--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 @import "./mainVariables.css";
 @import "./header.css";
-@import "./mainFeauters.css";
-@import "./mainProcess.css";
-@import "./mainBrands.css";
-@import "./mainWork.css";
+@import "./featuers.css";
+@import "./process.css";
+@import "./brands.css";
+@import "./work.css";
 @import "./footer.css";
-
+ 
 * {
     margin: 0;
     padding: 0;
@@ -32,29 +32,12 @@ body {
         --main-padding: 140px;
         --block-distance: 120px;
     }
-    .hamburger-menu {
-        display: block;
-    }
-    .navbar-list {
-        display: none;
-    }
-    .navbar .btn {
-        display: none;
-    }
-    .page-logo--img {
-        width: 200px;
-        height: 50px;
-    }
 }
 
 @media screen and (max-width: 600px) {
     :root {
         --main-padding: 16px;
         --block-distance: 40px;
-    }
-    .page-logo--img {
-        width: 160px;
-        height: 40px;
     }
 }
 
