--- a/css/featuers.css
+++ b/css/featuers.css
@@ -48,7 +48,7 @@
   align-items: center;
   margin-bottom: 20px;
 }
-.features__container__block--img > img {
+.features__container__block--img img {
   width: 28px;
   height: 28px;
 }
@@ -73,4 +73,4 @@
   .features__container {
     justify-content: center;
   }
-}
+}/*# sourceMappingURL=featuers.css.map */
