--- a/css/footer.css
+++ b/css/footer.css
@@ -10,20 +10,27 @@
   flex-wrap: wrap;
   margin-bottom: 28px;
 }
-.footer .navbar-list__item {
+.footer__navbar .navbar-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 10px;
+}
+.footer__navbar .navbar-list__item {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.8);
   font-weight: 500;
   font-size: 16px;
   line-height: 100%;
   cursor: pointer;
+  white-space: nowrap;
 }
 .footer__navbar-links {
   display: flex;
   align-items: center;
   gap: 20px;
 }
-.footer__navbar-links > a > img {
+.footer__navbar-links img {
   width: 20px;
   height: 20px;
   cursor: pointer;
@@ -50,9 +57,9 @@
   align-items: center;
   gap: 24px;
 }
-.footer__license__block > p {
+.footer__license__block p {
   font-weight: 400;
   font-size: 15px;
   line-height: 20px;
   color: rgba(255, 255, 255, 0.8);
-}
+}/*# sourceMappingURL=footer.css.map */
