--- a/css/mainVariables.scss
+++ b/css/mainVariables.scss
@@ -19,26 +19,22 @@
   left: 0;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .page-logo {
   display: flex;
   align-items: center;
 }
-
 .page-logo__img {
   width: 260px;
   height: 60px;
 }
-
 .title {
   font-weight: 500;
   font-size: 48px;
   line-height: 122%;
 }
-
 .block-title {
   font-weight: 700;
   font-size: 22px;
@@ -46,14 +42,12 @@
   color: #3b3e43;
   margin-bottom: 15px;
 }
-
 .description {
   font-weight: 400;
   font-size: 20px;
   line-height: 34px;
   color: white;
 }
-
 .block-description {
   font-weight: 400;
   font-size: 16px;
@@ -81,6 +75,7 @@
     line-height: 100%;
   }
 }
+
 @media screen and (max-width: 600px) {
   .page-logo__img {
     width: 160px;
@@ -93,4 +88,4 @@
     font-size: 16px;
     line-height: 28px;
   }
-}/*# sourceMappingURL=mainVariables.css.map */
+}
