--- a/css/process.css
+++ b/css/process.css
@@ -36,7 +36,7 @@
   gap: 40px;
   width: 100%;
 }
-.process__block {
+.process__container .process__block {
   width: 100%;
   background: #ffffff;
   box-shadow: 0px 20px 50px rgba(59, 62, 67, 0.05);
@@ -46,18 +46,18 @@
   padding: 28px;
   position: relative;
 }
-.process__block__img {
+.process__container .process__block__img {
   width: 48%;
 }
-.process__block--relative {
+.process__container .process__block--relative {
   position: relative;
   padding-top: 54%;
 }
-.process__block__info {
+.process__container .process__block__info {
   width: 48%;
   padding-top: 40px;
 }
-.process__block__info__img {
+.process__container .process__block__info__img {
   width: 50px;
   height: 50px;
   margin-bottom: 20px;
@@ -65,14 +65,14 @@
   justify-content: center;
   align-items: center;
 }
-.process__block__info__img > img {
+.process__container .process__block__info__img img {
   width: 100%;
   height: 100%;
 }
-.process__block__info--description {
+.process__container .process__block__info--description {
   color: #595e64;
 }
-.process__block--line {
+.process__container .process__block--line {
   position: absolute;
   height: 40px;
   left: 50%;
@@ -97,6 +97,4 @@
   .process__block__info {
     width: 80%;
   }
-}
-
-
+}/*# sourceMappingURL=process.css.map */
