--- a/css/style.scss
+++ b/css/style.scss
@@ -6,17 +6,16 @@
 @import "./brands.css";
 @import "./work.css";
 @import "./footer.css";
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
 :root {
   --main-padding: 250px;
   --block-distance: 184px;
 }
-
 body {
   background-color: #f2f2f2;
   font-family: "DM Sans", sans-serif;
@@ -27,15 +26,17 @@ body {
     --main-padding: 25%;
   }
 }
+
 @media screen and (max-width: 1250px) {
   :root {
     --main-padding: 140px;
     --block-distance: 120px;
   }
 }
+
 @media screen and (max-width: 600px) {
   :root {
     --main-padding: 16px;
     --block-distance: 40px;
   }
-}/*# sourceMappingURL=style.css.map */
+}
