--- a/css/featuers.css
+++ b/css/featuers.css
@@ -8,7 +8,7 @@
 .features__header {
   max-width: 528px;
 }
-.features__header--text {
+.features__header-text {
   font-weight: 700;
   font-size: 12px;
   line-height: 122%;
@@ -17,7 +17,7 @@
   opacity: 0.5;
   margin-bottom: 24px;
 }
-.features__header--title {
+.features__header-title {
   color: #3b3e43;
   margin-bottom: 32px;
 }
@@ -27,7 +27,7 @@
   justify-content: space-between;
   gap: 24px;
 }
-.features__container__block {
+.features__block {
   display: flex;
   flex-direction: column;
   padding: 50px 23px 0 40px;
@@ -37,7 +37,7 @@
   box-shadow: 0px 20px 50px rgba(59, 62, 67, 0.05);
   border-radius: 15px;
 }
-.features__container__block--img {
+.features__block-img {
   width: 50px;
   height: 50px;
   background: #ffe7db;
@@ -48,22 +48,22 @@
   align-items: center;
   margin-bottom: 20px;
 }
-.features__container__block--img > img {
+.features__block-img > img {
   width: 28px;
   height: 28px;
 }
-.features__container__block--description {
+.features__block-description {
   color: #595e64;
 }
 
 @media screen and (max-width: 1250px) {
-  .features__header--title {
+  .features__header-title {
     margin-bottom: 20px;
   }
   .features__container {
     gap: 12px;
   }
-  .features__container__block {
+  .features__block {
     padding: 20px 8px 10px 10px;
     width: 270px;
     height: auto;
