--- a/css/header.css
+++ b/css/header.css
@@ -109,6 +109,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  padding-inline: var(--main-padding);
 }
 .header-main__title {
   font-weight: 500;
@@ -126,7 +127,7 @@
   margin-bottom: 88px;
 }
 .header-main__img {
-  width: 70%;
+  width: 100%;
 }
 .header-main__img-relatively {
   position: relative;
