--- a/css/process.css
+++ b/css/process.css
@@ -69,6 +69,9 @@
   width: 100%;
   height: 100%;
 }
+.process__block-title {
+  margin-bottom: 16px;
+}
 .process__block-info-description {
   color: #595e64;
 }
@@ -96,5 +99,8 @@
   }
   .process__block-info {
     width: 80%;
+  }
+  .process__block-title {
+    margin-bottom: 8px;
   }
 }
