--- a/css/work.scss
+++ b/css/work.scss
@@ -5,12 +5,10 @@
   display: flex;
   justify-content: space-between;
 }
-
 .works__info {
   width: 40%;
   margin-top: 60px;
 }
-
 .works__text {
   font-weight: 700;
   font-size: 12px;
@@ -20,17 +18,14 @@
   opacity: 0.5;
   margin-bottom: 24px;
 }
-
 .works__info-title {
   color: #ffffff;
   margin-bottom: 24px;
 }
-
 .works__info-description {
   text-align: left;
   margin-bottom: 32px;
 }
-
 .works__img {
   width: 50%;
 }
@@ -58,6 +53,7 @@
     margin-bottom: 16px;
   }
 }
+
 @media screen and (max-width: 600px) {
   .works__img {
     width: 100%;
@@ -68,4 +64,4 @@
   .works__info-description {
     margin-bottom: 10px;
   }
-}/*# sourceMappingURL=work.css.map */
+}
