--- a/css/footer.css
+++ b/css/footer.css
@@ -10,6 +10,9 @@
   flex-wrap: wrap;
   margin-bottom: 28px;
 }
+.footer__navbar .navbar-list{
+  flex-wrap: wrap;
+}
 .footer .list-item {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.8);
@@ -17,11 +20,13 @@
   font-size: 16px;
   line-height: 100%;
   cursor: pointer;
+  white-space: nowrap;
 }
 .footer__navbar-links {
   display: flex;
   align-items: center;
   gap: 20px;
+  margin-top: 5px;
 }
 .footer__navbar-links > a > img {
   width: 20px;
