--- a/css/featuers.css
+++ b/css/featuers.css
@@ -27,7 +27,7 @@
   justify-content: space-between;
   gap: 24px;
 }
-.features__block {
+.features__container .features__block {
   display: flex;
   flex-direction: column;
   padding: 50px 23px 0 40px;
@@ -37,7 +37,7 @@
   box-shadow: 0px 20px 50px rgba(59, 62, 67, 0.05);
   border-radius: 15px;
 }
-.features__block-img {
+.features__container .features__block-img {
   width: 50px;
   height: 50px;
   background: #ffe7db;
@@ -48,14 +48,14 @@
   align-items: center;
   margin-bottom: 20px;
 }
-.features__block-img > img {
+.features__container .features__block-img img {
   width: 28px;
   height: 28px;
 }
-.features__block-title{
+.features__container .features__block-title {
   margin-bottom: 16px;
 }
-.features__block-description {
+.features__container .features__block-description {
   color: #595e64;
 }
 
@@ -66,12 +66,12 @@
   .features__container {
     gap: 12px;
   }
-  .features__block {
+  .features__container .features__block {
     padding: 20px 8px 10px 10px;
     width: 270px;
     height: auto;
   }
-  .features__block-title{
+  .features__container .features__block-title {
     margin-bottom: 8px;
   }
 }
@@ -79,4 +79,4 @@
   .features__container {
     justify-content: center;
   }
-}
+}/*# sourceMappingURL=featuers.css.map */
