--- a/css/footer.css
+++ b/css/footer.css
@@ -10,10 +10,13 @@
   flex-wrap: wrap;
   margin-bottom: 28px;
 }
-.footer__navbar .navbar-list{
+.footer__navbar .navbar-list {
+  display: flex;
   flex-wrap: wrap;
+  gap: 20px;
+  list-style: none;
 }
-.footer .list-item {
+.footer__navbar .navbar-list .list-item {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.8);
   font-weight: 500;
@@ -28,7 +31,7 @@
   gap: 20px;
   margin-top: 5px;
 }
-.footer__navbar-links > a > img {
+.footer__navbar a img {
   width: 20px;
   height: 20px;
   cursor: pointer;
@@ -55,9 +58,9 @@
   align-items: center;
   gap: 24px;
 }
-.footer__license-block > p {
+.footer__license-block p {
   font-weight: 400;
   font-size: 15px;
   line-height: 20px;
   color: rgba(255, 255, 255, 0.8);
-}
+}/*# sourceMappingURL=footer.css.map */
