--- a/css/header.css
+++ b/css/header.css
@@ -8,7 +8,7 @@
   align-items: center;
   margin-bottom: var(--block-distance);
 }
-.navbar {
+.header .navbar {
   width: 100%;
   padding-inline: 52px;
   display: flex;
@@ -17,12 +17,12 @@
   margin-top: 32px;
   margin-bottom: var(--block-distance);
 }
-.navbar-list {
+.header .navbar-list {
   display: flex;
   gap: 20px;
   list-style: none;
 }
-.header .list-item {
+.header .navbar-list .list-item {
   text-decoration: none;
   color: white;
   font-weight: 500;
@@ -30,31 +30,30 @@
   line-height: 100%;
   cursor: pointer;
 }
-.mobile-menu {
+.header .navbar .mobile-menu {
   display: none;
 }
-
-#mobile-menu__togle {
+.header .navbar .mobile-menu #mobile-menu__togle {
   opacity: 0;
 }
-#mobile-menu__togle:checked + .mobile-menu__btn {
+.header .navbar .mobile-menu #mobile-menu__togle:checked + .mobile-menu__btn {
   position: fixed;
 }
-#mobile-menu__togle:checked + .mobile-menu__btn > span {
+.header .navbar .mobile-menu #mobile-menu__togle:checked + .mobile-menu__btn span {
   transform: rotate(45deg);
 }
-#mobile-menu__togle:checked + .mobile-menu__btn > span::before {
+.header .navbar .mobile-menu #mobile-menu__togle:checked + .mobile-menu__btn span::before {
   top: 0;
   transform: rotate(0deg);
 }
-#mobile-menu__togle:checked + .mobile-menu__btn > span::after {
+.header .navbar .mobile-menu #mobile-menu__togle:checked + .mobile-menu__btn span::after {
   top: 0;
   transform: rotate(90deg);
 }
-#mobile-menu__togle:checked ~ .mobile-menu__navbar-list {
+.header .navbar .mobile-menu #mobile-menu__togle:checked ~ .mobile-menu__navbar-list {
   right: 0;
 }
-.mobile-menu__btn {
+.header .navbar .mobile-menu__btn {
   position: relative;
   display: block;
   width: 26px;
@@ -62,9 +61,9 @@
   cursor: pointer;
   z-index: 2;
 }
-.mobile-menu__btn > span,
-.mobile-menu__btn > span::before,
-.mobile-menu__btn > span::after {
+.header .navbar .mobile-menu__btn span,
+.header .navbar .mobile-menu__btn span::before,
+.header .navbar .mobile-menu__btn span::after {
   display: block;
   position: absolute;
   width: 100%;
@@ -72,15 +71,15 @@
   background-color: #000;
   transition-duration: 0.25s;
 }
-.mobile-menu__btn > span::before {
+.header .navbar .mobile-menu__btn span::before {
   content: "";
   top: -8px;
 }
-.mobile-menu__btn > span::after {
+.header .navbar .mobile-menu__btn span::after {
   content: "";
   top: 8px;
 }
-.mobile-menu__navbar-list {
+.header .navbar .mobile-menu__navbar-list {
   display: block;
   position: fixed;
   top: 0;
@@ -95,23 +94,23 @@
   transition-duration: 0.25s;
   z-index: 1;
 }
-.mobile-menu__navbar-list .list-item {
+.header .navbar .mobile-menu__navbar-list .list-item {
   display: block;
   padding: 12px 24px;
   color: #333;
   font-size: 20px;
   font-weight: 600;
   transition-duration: 0.25s;
+  text-decoration: none;
 }
-
-.header-main {
+.header .header-main {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
   padding-inline: var(--main-padding);
 }
-.header-main__title {
+.header .header-main__title {
   font-weight: 500;
   font-size: 68px;
   line-height: 120%;
@@ -119,29 +118,29 @@
   text-align: center;
   margin-bottom: 8px;
 }
-.header-main__description {
+.header .header-main__description {
   text-align: center;
   margin-bottom: 40px;
 }
-.header-main .btn {
+.header .header-main .btn {
   margin-bottom: 88px;
 }
-.header-main__img {
+.header .header-main__img {
   width: 100%;
 }
-.header-main__img-relatively {
+.header .header-main__img-relatively {
   position: relative;
   padding-top: 63%;
 }
 
 @media screen and (max-width: 1250px) {
-  .navbar .navbar-list {
+  .header .navbar-list {
     display: none;
   }
-  .navbar .btn {
+  .header .navbar .btn {
     display: none;
   }
-  .mobile-menu {
+  .header .navbar .mobile-menu {
     display: block;
   }
   .header-main__title {
@@ -157,4 +156,4 @@
   .header-main__img {
     width: 100%;
   }
-}
+}/*# sourceMappingURL=header.css.map */
