--- a/css/process.css
+++ b/css/process.css
@@ -36,7 +36,7 @@
   gap: 40px;
   width: 100%;
 }
-.process__block {
+.process__container .process__block {
   width: 100%;
   background: #ffffff;
   box-shadow: 0px 20px 50px rgba(59, 62, 67, 0.05);
@@ -46,18 +46,18 @@
   padding: 28px;
   position: relative;
 }
-.process__block-img {
+.process__container .process__block-img {
   width: 48%;
 }
-.process__block-img-relatively {
+.process__container .process__block-img-relatively {
   position: relative;
   padding-top: 54%;
 }
-.process__block-info {
+.process__container .process__block-info {
   width: 48%;
   padding-top: 40px;
 }
-.process__block-info-img {
+.process__container .process__block-info-img {
   width: 50px;
   height: 50px;
   margin-bottom: 20px;
@@ -65,17 +65,17 @@
   justify-content: center;
   align-items: center;
 }
-.process__block-info-img > img {
+.process__container .process__block-info-img img {
   width: 100%;
   height: 100%;
 }
-.process__block-title {
+.process__container .process__block-info .process__block-title {
   margin-bottom: 16px;
 }
-.process__block-info-description {
+.process__container .process__block-info .process__block-info-description {
   color: #595e64;
 }
-.process__block-line {
+.process__container .process__block-line {
   position: absolute;
   height: 40px;
   left: 50%;
@@ -103,4 +103,4 @@
   .process__block-title {
     margin-bottom: 8px;
   }
-}
+}/*# sourceMappingURL=process.css.map */
