--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,758 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
-@import "./mainVariables.css";
-@import "./header.css";
-@import "./featuers.css";
-@import "./process.css";
-@import "./brands.css";
-@import "./work.css";
-@import "./footer.css";
- 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 :root {
-    --main-padding: 250px;
-    --block-distance: 184px;
+  --main-padding: 0px;
+  --block-distance: 184px;
 }
 body {
-    background-color: #f2f2f2;
-    font-family: "DM Sans", sans-serif;
+  padding-top: 32px;
+  background-color: #f2f2f2;
+  font-family: "DM Sans", sans-serif;
+  background-image: url("../img/header_bg.png");
+  background-repeat: no-repeat;
+  background-size: 102% 15%;
+  background-position-y: -25px;
 }
 
-@media screen and (min-width: 2000px) {
-    :root {
-        --main-padding: 25%;
-    }
+.btn {
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 148%;
+  padding: 20px 50px;
+  background: #ffffff;
+  border-radius: 60px;
+  color: #57b3fe;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+
+.btn:hover {
+  background-color: black;
+  color: white;
+}
+
+.aspect-ratio-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.page-logo {
+  display: flex;
+  align-items: center;
+}
+.page-logo__img {
+  width: 260px;
+  height: 60px;
+}
+
+.navbar-list {
+  display: flex;
+}
+.navbar-item {
+  list-style: none;
+}
+
+.navbar__link {
+  color: inherit;
+  text-decoration: none;
+  transition: all 0.5s;
+}
+
+.navbar__link:hover {
+  color: blue;
+}
+
+.title {
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 122%;
+}
+.block-title {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 30px;
+  color: #3b3e43;
+}
+
+.description {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 34px;
+  color: white;
+}
+
+.block-description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 148%;
+}
+
+.header {
+  margin: 0 auto;
+  display: flex;
+  width: 100%;
+  max-width: 2000px;
+  padding-inline: 52px;
+  margin-bottom: var(--block-distance);
+}
+
+.navbar {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar-list--disapear {
+  gap: 32px;
+  color: white;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.mobile-menu {
+  display: none;
+}
+
+#mobile-menu__togle {
+  opacity: 0;
+}
+
+#mobile-menu__togle:checked + .mobile-menu__btn {
+  position: fixed;
+}
+
+#mobile-menu__togle:checked + .mobile-menu__btn > span {
+  transform: rotate(45deg);
+}
+
+#mobile-menu__togle:checked + .mobile-menu__btn > span::before {
+  top: 0;
+  transform: rotate(0deg);
+}
+
+#mobile-menu__togle:checked + .mobile-menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+
+#mobile-menu__togle:checked ~ .mobile-menu__navbar {
+  right: 0;
+}
+
+.mobile-menu__btn {
+  position: relative;
+  display: block;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.mobile-menu__btn > span,
+.mobile-menu__btn > span::before,
+.mobile-menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #000;
+  transition-duration: 0.25s;
+}
+
+.mobile-menu__btn > span::before {
+  content: "";
+  top: -8px;
+}
+
+.mobile-menu__btn > span::after {
+  content: "";
+  top: 8px;
+}
+
+.mobile-menu__navbar {
+  display: block;
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 300px;
+  height: 100%;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  background-color: #f2f2f2;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+  transition-duration: 0.25s;
+  z-index: 1;
+}
+
+.navbar__link--mobile {
+  display: block;
+  padding: 12px 24px;
+  color: #333;
+  font-size: 20px;
+  font-weight: 600;
+  transition-duration: 0.25s;
+  text-decoration: none;
+}
+
+.navbar__link--mobile:focus {
+  background-color: black;
+  color: white;
+}
+
+.wrapper {
+  width: 100%;
+  margin-bottom: var(--block-distance);
+  padding-inline: var(--main-padding);
+}
+
+.wrapper__content {
+  margin: 0 auto;
+  max-width: 1170px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.wrapper__title {
+  font-weight: 500;
+  font-size: 68px;
+  line-height: 120%;
+  color: white;
+  text-align: center;
+  margin-bottom: 8px;
+}
+
+.wrapper__description {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.btn--margin {
+  margin-bottom: 88px;
+}
+
+.wrapper__img {
+  width: 100%;
+}
+
+.wrapper__img-relatively {
+  position: relative;
+  padding-top: 63%;
+}
+
+.features {
+  width: 100%;
+  background-image: url("../img/main_help_bg.png");
+  background-position: center;
+  background-size: cover;
+  margin-bottom: var(--block-distance);
+  padding-inline: var(--main-padding);
+}
+
+.features__content {
+  margin: 0 auto;
+  max-width: 1170px;
+  width: 100%;
+}
+
+.features__header {
+  max-width: 528px;
+}
+
+.features__header-text {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 122%;
+  letter-spacing: 0.15em;
+  color: #00a077;
+  opacity: 0.5;
+  margin-bottom: 24px;
+}
+
+.features__header-title {
+  color: #3b3e43;
+  margin-bottom: 32px;
+}
+
+.features__container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 28px;
+}
+
+.features__block {
+  display: flex;
+  flex-direction: column;
+  padding: 50px 23px 0 40px;
+  width: 360px;
+  height: 335px;
+  background: #ffffff;
+  box-shadow: 0px 20px 50px rgba(59, 62, 67, 0.05);
+  border-radius: 15px;
+}
+
+.features__block-img {
+  width: 50px;
+  height: 50px;
+  background: #ffe7db;
+  box-shadow: 0px 10px 20px rgba(197, 158, 145, 0.1);
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.features__block-img > img {
+  width: 28px;
+  height: 28px;
+}
+
+.features__block-title {
+  margin-bottom: 16px;
+}
+
+.features__block-description {
+  color: #595e64;
+}
+
+.process {
+  background-image: url("../img/main_process_bg.png");
+  background-position: center;
+  background-size: cover;
+  padding: 184px var(--main-padding);
+  margin-bottom: var(--block-distance);
+}
+
+.process__content {
+  margin: 0 auto;
+  max-width: 1170px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.process__header {
+  max-width: 718px;
+}
+
+.process__header-text {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 122%;
+  text-align: center;
+  letter-spacing: 0.15em;
+  color: #ffffff;
+  opacity: 0.5;
+  margin-bottom: 12px;
+}
+
+.process__header-title {
+  text-align: center;
+  color: #ffffff;
+  margin-bottom: 24px;
+}
+
+.process__header-description {
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.process__container {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  width: 100%;
+}
+
+.process__block {
+  width: 100%;
+  background: #ffffff;
+  box-shadow: 0px 20px 50px rgba(59, 62, 67, 0.05);
+  border-radius: 15px;
+  display: flex;
+  justify-content: space-between;
+  padding: 28px;
+  position: relative;
+}
+
+.process__block-img {
+  width: 48%;
+}
+
+.process__block-img-relatively {
+  position: relative;
+  padding-top: 54%;
+}
+
+.process__block-info {
+  width: 48%;
+  padding-top: 40px;
+}
+
+.process__block-info-img {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.process__block-info-img > img {
+  width: 100%;
+  height: 100%;
+}
+
+.process__block-title {
+  margin-bottom: 16px;
+}
+
+.process__block-info-description {
+  color: #595e64;
+}
+
+.process__block-line {
+  position: absolute;
+  height: 40px;
+  left: 50%;
+  bottom: -40px;
+  border: 1px dotted white;
+}
+
+.brands {
+  width: 100%;
+  padding-inline: var(--main-padding);
+  margin-bottom: var(--block-distance);
+}
+
+.brands__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  max-width: 1170px;
+  width: 100%;
+}
+
+.brands__text {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 122%;
+  text-align: center;
+  letter-spacing: 0.15em;
+  color: #00a077;
+  opacity: 0.5;
+  margin-bottom: 24px;
+}
+
+.brands__title {
+  max-width: 890px;
+  text-align: center;
+  color: #3b3e43;
+  margin-bottom: 32px;
+}
+
+.brands__logos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 80px;
+  margin-bottom: 60px;
+  width: 100%;
+}
+
+.brand-logo {
+  width: 142px;
+  height: 56px;
+}
+
+.brands__description {
+  text-align: center;
+  color: #424a4d;
+  max-width: 380px;
+}
+
+.works {
+  width: 100%;
+  padding: 148px var(--main-padding);
+  background: linear-gradient(249.78deg, #35d3ff -0.64%, #a963fb 103.6%);
+}
+
+.works__content {
+  margin: 0 auto;
+  max-width: 1170px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.works__info {
+  width: 40%;
+  margin-top: 60px;
+}
+
+.works__text {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 122%;
+  letter-spacing: 0.15em;
+  color: #ffffff;
+  opacity: 0.5;
+  margin-bottom: 24px;
+}
+
+.works__info-title {
+  color: #ffffff;
+  margin-bottom: 24px;
+}
+
+.works__info-description {
+  text-align: left;
+  margin-bottom: 32px;
+}
+
+.works__img {
+  width: 50%;
+}
+
+.works__img-relatively {
+  position: relative;
+  padding-top: 83%;
+}
+
+.footer {
+  background: #0d0d0d;
+  padding: 84px var(--main-padding) 32px var(--main-padding);
+}
+.footer__content {
+  margin: 0 auto;
+  max-width: 1170px;
+  width: 100%;
+}
+.navbar--wrap {
+  flex-wrap: wrap;
+  margin-bottom: 28px;
+}
+
+.navbar-list--wrap {
+  flex-wrap: wrap;
+  gap: 32px;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.8);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  white-space: nowrap;
+}
+
+.footer__navbar-links {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-top: 5px;
+}
+
+.social-img {
+  width: 20px;
+  height: 20px;
+}
+
+.footer__line {
+  width: 100%;
+  opacity: 0.35;
+  border: 1px solid #ffffff;
+  margin-bottom: 28px;
+}
+
+.footer__license {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer__license-company {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.footer__license-block {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 20px;
+  color: rgba(255, 255, 255, 0.8);
 }
 
 @media screen and (max-width: 1250px) {
-    :root {
-        --main-padding: 140px;
-        --block-distance: 120px;
-    }
+  :root {
+    --main-padding: 40px;
+    --block-distance: 120px;
+  }
+
+  body {
+    background-size: 102% 10%;
+  }
+
+  .page-logo__img {
+    width: 200px;
+    height: 50px;
+  }
+
+  .title {
+    font-size: 36px;
+  }
+
+  .block-title {
+    font-size: 20px;
+    line-height: 28px;
+  }
+
+  .description {
+    font-size: 18px;
+  }
+
+  .block-description {
+    font-size: 14px;
+    line-height: 100%;
+  }
+
+  .navbar-list--disapear {
+    display: none;
+  }
+
+  .btn--disapear {
+    display: none;
+  }
+
+  .mobile-menu {
+    display: block;
+  }
+
+  .wrapper__title {
+    font-size: 42px;
+    line-height: 80%;
+  }
+
+  .features__header-title {
+    margin-bottom: 20px;
+  }
+
+  .features__container {
+    gap: 12px;
+  }
+
+  .features__block {
+    padding: 20px 8px 10px 10px;
+    width: 270px;
+    height: auto;
+  }
+
+  .features__block-title {
+    margin-bottom: 8px;
+  }
+
+  .process__header-title {
+    margin-bottom: 10px;
+  }
+
+  .process__header-description {
+    margin-bottom: 24px;
+  }
+
+  .process__block-title {
+    margin-bottom: 8px;
+  }
+
+  .brands__title {
+    margin-bottom: 20px;
+  }
+
+  .brands__logos {
+    gap: 30px;
+  }
+
+  .works__info-title {
+    margin-bottom: 10px;
+  }
+
+  .works__info-description {
+    margin-bottom: 16px;
+  }
 }
 
 @media screen and (max-width: 600px) {
-    :root {
-        --main-padding: 16px;
-        --block-distance: 40px;
-    }
-}
+  :root {
+    --main-padding: 16px;
+    --block-distance: 40px;
+  }
 
+  .page-logo__img {
+    width: 160px;
+    height: 40px;
+  }
+
+  .title {
+    font-size: 28px;
+  }
+
+  .description {
+    font-size: 16px;
+    line-height: 28px;
+  }
+
+  .wrapper__title {
+    font-size: 36px;
+    line-height: 80%;
+  }
+
+  .process__block {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .process__block-img {
+    width: 100%;
+  }
+
+  .process__block-info {
+    width: 100%;
+  }
+
+  .works__content {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  .works__img {
+    width: 100%;
+  }
+
+  .works__info {
+    width: 100%;
+  }
+
+  .works__info-description {
+    margin-bottom: 10px;
+  }
+}
