change body image size

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body {
   font-family: "DM Sans", sans-serif;
   background-image: url("../img/header_bg.png");
   background-repeat: no-repeat;
-  background-size: 102% 15%;
+  background-size: 102% 18%;
   background-position-y: -25px;
 }
 
@@ -611,7 +611,7 @@ body {
   }
 
   body {
-    background-size: 102% 10%;
+    background-size: 102% 13%;
   }
 
   .page-logo__img {
@@ -705,6 +705,10 @@ body {
   :root {
     --main-padding: 16px;
     --block-distance: 40px;
+  }
+
+  body {
+    background-size: 102% 10%;
   }
 
   .page-logo__img {
