--- a/sass/_brands.scss
+++ b/sass/_brands.scss
@@ -33,7 +33,8 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 80px;
+      gap: 112px;
+      row-gap: 68px;
       margin-bottom: 60px;
       width: 100%;
 
