--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,7 +15,7 @@ body {
   font-family: "DM Sans", sans-serif;
   background-image: url("../img/header_bg.png");
   background-repeat: no-repeat;
-  background-size: 102% 15%;
+  background-size: 102% 18%;
   background-position-y: -25px;
 }
 
@@ -33,11 +33,11 @@ body {
   color: #57b3fe;
   cursor: pointer;
   transition: all 0.5s;
-}
 
-.btn:hover {
-  background-color: black;
-  color: white;
+  &:hover {
+    background-color: black;
+    color: white;
+  }
 }
 
 .aspect-ratio-img {
@@ -77,10 +77,10 @@ body {
   color: inherit;
   text-decoration: none;
   transition: all 0.5s;
-}
 
-.navbar__link:hover {
-  color: blue;
+  &:hover {
+    color: blue;
+  }
 }
 
 .title {
@@ -123,7 +123,7 @@ body {
   }
 
   body {
-    background-size: 102% 10%;
+    background-size: 102% 13%;
   }
 
   .page-logo__img {
@@ -154,6 +154,10 @@ body {
   :root {
     --main-padding: 16px;
     --block-distance: 40px;
+  }
+
+  body {
+    background-size: 102% 10%;
   }
 
   .page-logo__img {
