--- a/css/main.css
+++ b/css/main.css
@@ -473,7 +473,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 80px;
+  gap: 112px;
+  flex-grow: 68px;
   margin-bottom: 60px;
   width: 100%;
 }
